<resources>
    <string name="app_name">Rocket Wallet</string>

    <string name="menu_button">Menu</string>
    <string name="ether_label">ETH</string>

    <string name="history_tab_label">History</string>
    <string name="statistics_tab_label">Statistics</string>

    <string name="wallet_total">Total wallet</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="import_wallet">Import wallet</string>
    <string name="manage_your_digital_assets">Manage your digital assets</string>

    <string name="send_button">Send</string>
    <string name="receive_button">Receive</string>
    <string name="release_button">Release Of A Token</string>
    <string name="backers_button">Backers</string>
    <string name="settings_button">Settings</string>
    <string name="faq_button">FAQ</string>
    <string name="online_support_button">Support</string>

    <string name="log_in_button"><u>Log in</u></string>
    <string name="join_button">Join</string>

    <string name="verified_status">verified</string>
    <string name="not_verified_status">not verified</string>
    <string name="copy_arr_button"><u>Copy address</u></string>

    <string name="market_cap">Market capitalization:</string>
    <string name="lowest_rate">The lowest rate for 24H:</string>
    <string name="highest_rate">The highest rate for 24H:</string>
    <string name="trading_volume">Trading volume 24H:</string>

    <string name="launch_date">Launch date</string>
    <string name="hashing_alg">Hashing algorithm</string>
    <string name="net_power">Network power</string>
    <string name="of_site">Official website</string>
    <string name="av_and_support">Available/Support</string>
    <string name="blockchain">Blockchain</string>

    <string name="hover_label">Hover over QR code. To send the currency</string>
    <string name="send_payment_label">Send payment</string>
    <string name="send_payment_description">Select the token of crypto currency you want to send</string>

    <string name="create_button">Create</string>
    <string name="all">All</string>
    <string name="receive">Receive</string>
    <string name="sent">Sent</string>
    <string name="_1d">1D</string>
    <string name="_1w">1W</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_6m">6M</string>
    <string name="_1y">1Y</string>
    <string name="_2y">2Y</string>
    <string name="to_label">To:</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="txfee_label">TxFee</string>
    <string name="total_label">Total:</string>

    <string name="bill_description">Verify that the data entered is correct</string>
    <string name="send_payment_button_text">Send payment</string>

    <string name="customization">Customization</string>
    <string name="privacy_and_security"><![CDATA[Privacy & Security]]></string>
    <string name="export_private_key">Export private key</string>

    <string name="log_in_label">Log in</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="eth_address">Ethereum Address</string>
    <string name="citizenship">Select your Citizenship</string>
    <string name="forget_pass"><u>Forgot password?</u></string>
    <string name="wallet_generation_error">Wallet generation error</string>
    <string name="update_info_error">Update info error</string>
    <string name="generating_new_wallet">Generating new wallet…</string>
    <string name="importing_wallet">Importing wallet…</string>
    <string name="please_wait">Please wait</string>
    <string name="private_key">Private key</string>
    <string name="label_import">Import</string>
    <string name="wrong_private_key">Wrong private key</string>
    <string name="copied">Copied</string>

    <string name="prefix_template">%s\u0020</string>
    <string name="quantity_template">%s%s</string>
    <string name="balance_template">%s %s</string>
    <string name="diff_template">%s</string>

    <string name="token_list">Token list</string>
    <string name="search_token">Search token…</string>
    <string name="sending">Sending</string>
    <string name="available_support_template">%s / %s</string>
    <string name="bill_template">%s Bill</string>

    <string name="added_string">Added</string>
    <string name="success_transaction">"Sent successfully"</string>

    <string name="address_error">Address is empty</string>
    <string name="payment_error">Payment can not be null</string>
    <string name="balance_error">You don\'t have much money</string>

    <string name="invalid_address">Invalid address</string>

    <string name="logout">Logout</string>
    <string name="server_is_not_available">Server is not available</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="null_value">...</string>
    <string name="no_balance_info">Please, update balances</string>
    <string name="no_history">No history</string>

    <string name="icon_path">tokens_icons/%s.png</string>
    <string name="sending_wait">Sending will be available in %d</string>

    <string name="permission_denied">Permission denied</string>

    <string name="logout_content">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="one_day">24h</string>
    <string name="fingerprint_label">Fingerprint</string>
    <string name="confirm_label">Confirm fingerprint to continue</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="enter_password_label">Enter password</string>
    <string name="enter_password">Please, enter your password</string>
    <string name="create_password">Create new password</string>
    
    <string name="no_match">Passwords do not match</string>
    <string name="noStatisticsLabel">No statistics</string>
    <string name="removeToken">Remove token</string>
    <string name="remove_err">You can\'t remove ETH from list</string>
    <string name="status">Status</string>
    <string name="unknown">Unknown</string>

    <string name="tokens_tab_label">Tokens</string>
    <string name="funds_tab_label">Funds</string>
    <string name="end_date_label">End Date:</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
