<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory android:title="@string/customization" />-->

    <!--<ListPreference-->
        <!--android:entries="@array/language_title"-->
        <!--android:entryValues="@array/language_code"-->
        <!--android:key="lang"-->
        <!--android:title="Language" />-->

    <PreferenceCategory android:title="@string/privacy_and_security" />

    <Preference
        android:key="export_private_key"
        android:title="@string/export_private_key" />

    <SwitchPreference
        android:key="password_key"
        android:defaultValue="false"
        android:title="@string/password_label" />

    <PreferenceCategory android:title="@string/logout"/>

    <Preference
        android:key="logout"
        android:title="@string/logout"/>
</PreferenceScreen>