<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listBackground"
    tools:context="io.rocketico.mapp.activity.MenuActivity">

    <FrameLayout
        android:id="@+id/userContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/menu_frame_layout_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/loggedOutView"
            layout="@layout/menu_logged_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <include
            android:id="@+id/loggedInView"
            layout="@layout/menu_logged_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_black_34dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userContainer">

        <Button
            android:id="@+id/sendButton"
            style="@style/MenuButtonDark"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/send_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/white_menu_item_div_height"
            android:background="@color/white" />

        <Button
            android:id="@+id/receiveButton"
            style="@style/MenuButtonDark"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/receive_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/white_menu_item_div_height"
            android:background="@color/white" />

        <Button
            android:id="@+id/releaseButton"
            style="@style/MenuButtonDark"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/release_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/white_menu_item_div_height"
            android:visibility="invisible"
            android:background="@color/white" />

        <Button
            android:id="@+id/backersToken"
            style="@style/MenuButtonDark"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/backers_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/white_menu_item_div_height"
            android:visibility="invisible"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/settingsButton"
            style="@style/MenuButtonWhite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_button" />

        <Button
            android:id="@+id/faqButton"
            style="@style/MenuButtonWhite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/faq_button" />

        <Button
            android:id="@+id/onlineSuppButton"
            style="@style/MenuButtonWhite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/online_support_button" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>